--- a/ywj.css
+++ b/ywj.css
@@ -49,8 +49,10 @@ html, body {
 		a {
 			text-decoration: none;			
 			color: rgb(29,99,174);
+			font-size: 1em;
 		}
 		div.main a {
 			color: white;
-			text-decoration: underline;
+			text-decoration: underline;			
+			font-weight: bold;
 		}
