--- a/ywj.css
+++ b/ywj.css
@@ -29,7 +29,7 @@ html, body {
 			opacity: 0.9;
 			overflow: auto;
 		}
-		div.main p, h3, h2{
+		div.main p, h3, h2, hr{
 			margin-left: 3%;
 			margin-right: 3%;
 		}
@@ -62,3 +62,9 @@ html, body {
 			text-decoration: underline;			
 			font-weight: bold;
 		}
+        hr {
+            color: darkblue;
+        }
+        input {
+            font: inherit;
+        }
